# HLS

./: .gitmodules  README.md  ReadMe.txt
HlsClient/: ReadMe.txt  build.sh
HlsClient/demo/: CMakeLists.txt  HlsClientDemo.cpp  HlsClientDemo.h  HlsClientIO.cpp  HlsClientIO.h  build.sh  main.cpp
HlsClient/demo/net/: CMakeLists.txt  TcpSocket.cpp  TcpSocketWin.cpp  build.sh
HlsClient/demo/net/include/: TcpSocket.h
HlsClient/prj/win/HlsClient/: HlsClient.sln
HlsClient/prj/win/HlsClient/HlsClient/: HlsClient.vcxproj  HlsClient.vcxproj.filters
HlsClient/prj/win/libHlsClient/: libHlsClient.sln
HlsClient/prj/win/libHlsClient/libHlsClient/: libHlsClient.vcxproj  libHlsClient.vcxproj.filters
HlsClient/src/: CMakeLists.txt  HlsClient.cpp  HlsClient.h  HlsClientInf.cpp  HlsClientSession.cpp  HlsClientSession.h  build.sh
HlsClient/src/ThirdSrc/: build.sh
HlsClient/src/include/: HlsClientCom.h  HlsClientInf.h
HlsServer/: ReadMe.txt
HlsServer/demo/: HlsServerDemo.cpp  HlsServerDemo.h  HlsServerIO.cpp  HlsServerIO.h  main.cpp
HlsServer/html/: index.html
HlsServer/prj/win/HlsServer/: HlsServer.sln
HlsServer/prj/win/HlsServer/HlsServer/: HlsServer.vcxproj  HlsServer.vcxproj.filters
HlsServer/prj/win/libHlsServer/: libHlsServer.sln
HlsServer/prj/win/libHlsServer/libHlsServer/: libHlsServer.vcxproj  libHlsServer.vcxproj.filters
HlsServer/src/: HlsServer.cpp  HlsServer.h  HlsServerInf.cpp  HlsServerSession.cpp  HlsServerSession.h  build.sh
HlsServer/src/ThirdSrc/: ReadMe.txt  build.sh
HlsServer/src/include/: HlsServerCom.h
